test/blackbox-test/test-cases/tuple_error.expected
test-cases/tuple_error.erl:6: Type error: type mismatch;
  found   : {1, 2}
  required: {'ok', any()}
there is no solution that satisfies subtype constraints
